--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -28,6 +28,13 @@ $border-grey-1:#B6C3E5;
 $btn-border-green:#7DE0A5;
 $light-green:#E7FFF0;
 $btn-green-text:#0DAD4D;
+
+//my variables
+$input-text-color:#4D6090;
+$blue-text-single:#3072F3;
+$sub-text-color:#768BC2;
+$border-color:#6982C0;
+$bg-color-check:#D3E3F8;
 // Breakpoints
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
