--- a/css/modal.css
+++ b/css/modal.css
@@ -447,7 +447,7 @@
         .success-modal .modal-body .modal-title img {
           height: 55px; } }
     .success-modal .modal-body .modal-title h2 {
-      color: #292D32;
+      color: #2E4276;
       font-size: 21px;
       font-weight: 600;
       margin-bottom: 8px; }
@@ -494,7 +494,7 @@
           .success-modal .modal-body .stake-detail .stake-amt .stake-amt-txt {
             margin-bottom: 0; } }
       .success-modal .modal-body .stake-detail .stake-amt .stake-rupees {
-        color: #292D32;
+        color: #2E4276;
         font-weight: 600;
         font-size: 14px;
         word-break: break-word; }
@@ -504,12 +504,15 @@
 
 .btn-black {
   border-radius: 24px;
-  background: #292D32;
+  background: #2966FF;
   color: #fff;
   height: 48px;
   min-width: 232px;
   margin-top: 17px;
-  font-size: 15px; }
+  font-size: 15px;
+  transition: .3s; }
+  .btn-black:hover {
+    opacity: .8; }
   @media (max-width: 1679px) {
     .btn-black {
       font-size: 14px; } }
