--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -570,7 +570,7 @@
             }
             h2
             {
-                color: #292D32;
+                color: $text-primary-dark;
                 font-size: 21px;
                 font-weight: 600;
                 margin-bottom: 8px;
@@ -629,7 +629,7 @@
                     }
                 }
                 .stake-rupees {
-                    color: #292D32;
+                    color: $text-primary-dark;
                     font-weight: 600;
                     font-size: 14px;
                     word-break: break-word;
@@ -646,12 +646,16 @@
 .btn-black
 {
     border-radius: 24px;
-    background: #292D32;
+    background: $primary-blue;
     color: #fff;
     height: 48px;
     min-width: 232px;
     margin-top: 17px;
     font-size: 15px;
+    transition: .3s;
+    &:hover{
+        opacity: .8;
+    }
     @media(max-width:1679px)
     {
         font-size: 14px;
