--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -565,10 +565,12 @@
         .lock-period
         {
             color: $text-primary-light;
-            font-weight: 500;
             font-size: 16px;
             margin-top: 10px;
             margin-bottom: 10px;
+            span{
+                font-weight: 500;
+            }
             @media(max-width:1679px)
             {
                 font-size: 14px;
@@ -585,6 +587,7 @@
             align-items: stretch;
             width: 100%;
             margin-top:25px;
+            margin-bottom: 20px;
             @include placeholder{
                 color: $text-primary-light;
             }
@@ -619,8 +622,9 @@
                 }
                 .num-badge {
                     border-radius: 25px;
-                    background: #EFF0F9;
                     padding: 9px 28px;
+                    border: solid 1px $border-grey-1;
+                    color: $text-primary-dark;
                     margin-right: 8px;
                     font-size: 14px;
                     font-weight: 500;
@@ -639,8 +643,8 @@
                 }
                 .max-active
                 {
-                    background: #0DAD4D;
-                    color:#fff;
+                    background: $primary-blue;
+                    color:$primary-light;
                 }
             }
         }
@@ -665,7 +669,8 @@
                 }
                 img
                 {
-                    margin-right:5px;
+                    margin-right:15px;
+                    max-width: 19px;
                 }
                 span
                 {
@@ -677,7 +682,28 @@
                         font-size: 13px;
                     }
                 }
+                .cnt{
+                    color: $text-primary-dark;
+                    font-weight: 600;
+                }
+                .props-col, .prop-num{
+                    font-weight: 600;
+                    color: $text-primary-dark;
+                }
               
+            }
+            &.rwd-col-inner{
+                display: flex;
+                flex-wrap: wrap;
+                .detail-outer{
+                    width: 50%;
+                    flex-wrap: wrap;
+                    margin-bottom: 30px;
+                    .props-col{
+                        padding-top: 6px;
+                        width: 100%;
+                    }
+                }
             }
         }
         .pool-cap-txt
@@ -734,8 +760,8 @@
         .btn-stake
         {
             border-radius: 24px;
-            background: #0DAD4D;
-            color: #fff;
+            background: $primary-blue;
+            color: $primary-light;
             display: inline-block;
             width: 100%;
             height: 52px;
@@ -745,6 +771,10 @@
             display: inline-flex;
             align-items: center;
             justify-content: center;
+            transition: .3s;
+            &:hover{
+                opacity: .8;
+            }
             @media(max-width:1679px)
             {
                 height: 50px;
