--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,6 +1,6 @@
 // Brand colors
 //––––––––––––––––––––––––––––––––––––––––––––––––––
-// $primary-dark: #292D32;
+$nav-dark: #292D32;
 $primary-dark: #2E4276;
 $primary-light: #fff;
 $green: #0DAD4D;
