--- a/scss/side-nav.scss
+++ b/scss/side-nav.scss
@@ -1,7 +1,7 @@
 @import "partials/partials";
 .nav-block{
     width: 300px;
-    background: $primary-dark;
+    background: $nav-dark;
     box-shadow: 0px 4px 112px 0px rgba(0, 0, 0, 0.08);
     border-radius: 0 16px 0 0;
     transition: .3s;
@@ -77,7 +77,7 @@
         flex: 1 1 auto;
         display: flex;
         flex-direction: column;
-        background-color: $primary-dark;
+        background-color: $nav-dark;
         .navbar-ul{
             list-style: none;
             padding: 0 10px;
@@ -152,12 +152,12 @@
             }
             .wallet-btn{
                 color: $primary-light;
-                background-color: $primary-dark;
+                background-color: $nav-dark;
                 border: solid 1px $primary-light;
             }
             .login-btn {
                 margin-top: 15px;
-                color: $primary-dark;
+                color: $nav-dark;
                 background-color: $primary-light;
                 img{
                     margin-left: 25px;
@@ -180,7 +180,7 @@
                 padding: 15px;
                 text-decoration: none;
                 display: inline-block;
-                color: $primary-dark;
+                color: $nav-dark;
                 transition: .3s;
                 white-space: nowrap;
                 overflow: hidden;
@@ -276,7 +276,7 @@
     }
     .body-wrapper .nav-block .nav-logo-wrapper{
         width: 100%;
-        background-color: $primary-dark;
+        background-color: $nav-dark;
         position: fixed;
         top: 0;
         left: 0;
