--- a/css/common.css
+++ b/css/common.css
@@ -25,7 +25,7 @@ ul, ol {
     position: relative;
     z-index: 1001; }
   .body-wrapper .content-block-outer {
-    background: #F7F7FC;
+    background: #F3F4FA;
     flex: 1 1 auto;
     transition: .3s;
     max-width: calc(100% - 300px); }
@@ -128,17 +128,26 @@ button {
     min-width: 120px;
     padding: 10px 15px;
     font-size: 14px;
-    border-radius: 20px;
-    border: 1px solid #E3E4F3;
     background: #fff;
-    color: #7F97B5;
+    color: #4D6090;
     transition: .3s;
-    margin-right: 15px; }
+    margin-right: 15px;
+    position: relative; }
+    .filter-wrapper .filter-nav-btn::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -14px;
+      border-radius: 1.5px;
+      width: 0;
+      height: 3px;
+      display: block;
+      transition: .3s ease-in-out;
+      background-color: #2966FF; }
     .filter-wrapper .filter-nav-btn:last-child {
       margin-right: 0; }
-    .filter-wrapper .filter-nav-btn:hover, .filter-wrapper .filter-nav-btn.active {
-      border: 0.9px solid #292D32;
-      background: #F7F7FC; }
+    .filter-wrapper .filter-nav-btn:hover::after, .filter-wrapper .filter-nav-btn.active::after {
+      width: 100%; }
     .filter-wrapper .filter-nav-btn.active {
       font-weight: 500;
       color: #2E4276; }
