--- a/scss/header.scss
+++ b/scss/header.scss
@@ -19,6 +19,10 @@
             max-width: none;
             opacity: 1 !important;
             color: #019419;
+            background-color: $primary-light;
+            border: solid 1px $input-text-color;
+            color: $input-text-color;
+            font-weight: 500;
             .status{
                 width: 8px;
                 height: 8px;
@@ -35,8 +39,9 @@
         .buy-btn{
             flex-shrink: 0;
             max-width: none;
-            background-color: $primary-dark;
-            color: $primary-light;
+            background-color: $primary-light;
+            color: $input-text-color;
+            border: solid 1px $input-text-color;
             width: 185px;
             margin-right: 15px;
             .buy-label{
@@ -176,12 +181,12 @@
                 max-height: 40px;
                 padding: 7px 18px 7px 13px;
                 border-radius: 20px;
-                background: #F3F4FA;
+                background: #E8EFFF;
                 border: none;
                 display: flex;
                 align-items: center;
                 font-size: 14px;
-                color: $primary-dark;
+                color: $input-text-color;
                 .acc-label{
                     margin-left: 10px;
                     margin-right: 8px;
@@ -189,6 +194,10 @@
                 &::after{
                     margin-left: auto;
                     margin-right: 10px;
+                    border-top-color: $input-text-color;
+                    border-top: 0.4em solid;
+                    border-right: 0.4em solid transparent;
+                    border-left: 0.4em solid transparent;
                 }
             }
             .dropdown-menu{
@@ -218,7 +227,7 @@
     }
     .info-block{
         font-size: 16px;
-        color: $primary-dark;
+        color: $input-text-color;
         margin-right: 40px;
         .info-label{
             font-weight: 600;
@@ -245,8 +254,8 @@
     }
     .wallet-btn{
         border-radius: 20px;
-        border: 1px solid #000;
-        background: $primary-light;
+        color: $primary-light;
+        background: $primary-blue;
         padding: 8px 30px;
         font-size: 14px;
         transition: .3s;
@@ -262,14 +271,13 @@
         margin-left: 15px;
         border-radius: 20px;
         border: none;
-        border: solid 1px #F3F4FA;
-        background: #F3F4FA;
+        background: #E8EFFF;
         padding: 8px 30px;
         transition: .3s;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        color: #292D32;
+        color: $input-text-color;
         font-size: 14px;
         img{
             margin-left: 25px;
