--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -445,11 +445,12 @@
 }
 .logout-modal{
     .modal-dialog{
-        @media (min-width: 992px) {
-            max-width: 600px;
+        @media (max-width:1679px) 
+        {
+            max-width: 550px !important;
         }
-        @media (min-width: 1481px) {
-            max-width: 680px;
+        @media (max-width:991px) {
+            max-width:96%;
         }
         @media (min-width: 1680px) {
             max-width: 730px;
@@ -845,6 +846,7 @@
                     font-size: 20px;
                     font-weight: 300;
                     margin-bottom: 3px;
+                    color:$primary-dark;
                     @media(max-width:991px)
                     {
                         font-size: 18px;
@@ -858,8 +860,9 @@
                 h5
                 {
                     font-size: 12px;
-                    color: #292D32;
+                    color: $label-txt-blue;
                     padding-right: 15px;
+                    font-weight: 400;
                 }
                 .icon-sec
                 {
@@ -895,22 +898,24 @@
                     margin-bottom:20px;
                     label
                     {
-                        color: #697F9B;
+                        color: $input-text-color;
                         font-size: 14px;
                     }
                     .form-control
                     {
                         width: 100%;
                         background: transparent;
-                        border: 1px solid #5E6C84;
+                        border: 1px solid $border-color;
                         border-radius: 50px !important;
                         height: 60px;
                         margin-top: 11px;
                         color: #333;
                         padding-left: 53px;
+                        font-size: 15px;
                         @media(max-width:1679px)
                         {
                             height: 55px;
+                            font-size: 14px;
                         }
                         @media(max-width:991px)
                         {
@@ -963,7 +968,7 @@
                   
                     .send-btn
                     {
-                        background: #292D32;
+                        background:$blue-text-single;
                         font-size: 16px;
                         color: #fff;
                         height: 52px;
